<resources>
    <string name="app_name">App edificios</string>

    <string name="TVEdificio">Edificio:</string>
    <string name="TVPiso">Piso:</string>
    <string name="TVNumero">Número:</string>
    <string name="TVtextview">TextView</string>

    <string name="TVRubro">Rubro:</string>
    <string name="TVTitulo">Título:</string>
    <string name="TVFotos">Fotos:</string>
    <string name="TVInstruccion">Ingrese su email y le enviaremos sus datos</string>
    <string name="TVReclamos">Reclamos Totales:</string>
    <string name="ATEdificio">Edificio X</string>
    <string name="ATPiso">Piso Y</string>
    <string name="ATNumero">Número Z</string>

    <string name="ATRubro">Rubro W</string>
    <string name="ATTitulo">Título bla bla</string>
    <string name="PTDescripcion">Descripción del problema...</string>
    <string name="BttnWindow">Generar Nuevo</string>
    <string name="BttnReclamosEdif">Todos Reclamos</string>
    <string name="BttnMisReclamos">Mis Reclamos</string>

    <string name="BttnCamera">Cámara</string>
    <string name="BttnAceptar">Aceptar</string>
    <string name="title_activity_main_activityjkyviy">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="claims">
        <item>Claim 1</item>
        <item>Claim 2</item>
        <item>Claim 3</item>
        <item>Claim 4</item>
        <item>Claim 5</item>
        <item>Claim 6</item>
        <item>Claim 7</item>
        <item>Claim 8</item>
        <item>Claim 9</item>
    </string-array>
    <string-array name="dates">
        <item>20/10/2020</item>
        <item>17/10/2020</item>
        <item>06/05/2020</item>
        <item>29/11/2019</item>
        <item>03/07/2019</item>
        <item>14/02/2019</item>
        <item>29/11/2019</item>
        <item>03/07/2019</item>
        <item>14/02/2019</item>
    </string-array>
    <string-array name="states">
        <item>Solved</item>
        <item>Solved</item>
        <item>Cancelled</item>
        <item>Solved</item>
        <item>Waiting</item>
        <item>Solved</item>
        <item>Cancelled</item>
        <item>Cancelled</item>
        <item>Cancelled</item>
    </string-array>

</resources>