<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TextViewEdificio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:hint="@string/TVEdificio"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TextViewPiso"
        app:layout_constraintEnd_toStartOf="@+id/AutoTextEdificio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PlainTextDescripcion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="69dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/PTDescripcion"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AutoTextTitulo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewFotos"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/TextViewFotos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:hint="@string/TVFotos"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/PlainTextDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/PlainTextDescripcion" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/PlainTextDescripcion"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/TextViewRubro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:hint="@string/TVRubro"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TextViewTitulo"
        app:layout_constraintEnd_toStartOf="@+id/AutoTextRubro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewNumero" />

    <AutoCompleteTextView
        android:id="@+id/AutoTextRubro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/ATRubro"
        app:layout_constraintBottom_toTopOf="@+id/AutoTextTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TextViewRubro"
        app:layout_constraintTop_toBottomOf="@+id/AutoTextNumero" />

    <TextView
        android:id="@+id/TextViewTitulo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:hint="@string/TVTitulo"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/PlainTextDescripcion"
        app:layout_constraintEnd_toStartOf="@+id/AutoTextTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewRubro" />

    <AutoCompleteTextView
        android:id="@+id/AutoTextEdificio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/ATEdificio"
        app:layout_constraintBottom_toTopOf="@+id/AutoTextPiso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TextViewEdificio"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextViewNumero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:hint="@string/TVNumero"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TextViewRubro"
        app:layout_constraintEnd_toStartOf="@+id/AutoTextNumero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewPiso" />

    <AutoCompleteTextView
        android:id="@+id/AutoTextPiso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/ATPiso"
        app:layout_constraintBottom_toTopOf="@+id/AutoTextNumero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TextViewPiso"
        app:layout_constraintTop_toBottomOf="@+id/AutoTextEdificio" />

    <AutoCompleteTextView
        android:id="@+id/AutoTextTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="18dp"
        android:hint="@string/ATTitulo"
        app:layout_constraintBottom_toTopOf="@+id/PlainTextDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TextViewTitulo"
        app:layout_constraintTop_toBottomOf="@+id/AutoTextRubro" />

    <AutoCompleteTextView
        android:id="@+id/AutoTextNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/ATNumero"
        app:layout_constraintBottom_toTopOf="@+id/AutoTextRubro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TextViewNumero"
        app:layout_constraintTop_toBottomOf="@+id/AutoTextPiso" />

    <TextView
        android:id="@+id/TextViewPiso"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:hint="@string/TVPiso"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TextViewNumero"
        app:layout_constraintEnd_toStartOf="@+id/AutoTextPiso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewEdificio" />

</androidx.constraintlayout.widget.ConstraintLayout>